# Ledger

./: .gitignore
data/: applicant_profiles.json  (+1 more)
starter/: .env.example  .gitignore  ARCHITECTURE.md  DESIGN.md  DOMAIN_NOTES.md  README.md  VIDEO_DEMO_GUIDE.md  check_comp001.py  demo.py  demo_integrity.py  find_comp001.py  get_events.py  get_events_detailed.py  get_full_event.py  process_application.py  process_comp001.py  process_comp001_postgres.py  pyproject.toml  requirements.txt  test_db.py  verify_comp001.py
starter/ledger/: event_store.py
starter/ledger/domain/aggregates/: loan_application.py
starter/src/: __init__.py  event_store.py  schema.sql
starter/src/aggregates/: __init__.py  agent_session.py  audit_ledger.py  compliance_record.py  loan_application.py
starter/src/commands/: __init__.py  handlers.py
starter/src/integrity/: __init__.py  audit_chain.py  gas_town.py
starter/src/mcp/: __init__.py  resources.py  server.py  tools.py
starter/src/models/: __init__.py  events.py
starter/src/projections/: __init__.py  agent_performance.py  application_summary.py  compliance_audit.py  daemon.py
starter/src/regulatory/: package.py
starter/src/upcasting/: __init__.py  registry.py  upcasters.py
starter/src/what_if/: projector.py
starter/tests/: test_concurrency.py  test_event_store.py  test_gas_town.py  test_integrity_chain.py  test_mcp_lifecycle.py
starter/tests/phase2/: test_domain.py
starter/tests/phase3/: test_projections.py
starter/tests/phase4/: test_upcasting.py
starter/tests/phase6/: test_what_if.py
starter/ui/: app.py
(+80 files in other folders)
